fix dark mode detection

--- a/static/skins/macintosh.css
+++ b/static/skins/macintosh.css
@@ -59,7 +59,6 @@ Made by Victoria Drake
 
 body {
     font-family: Macintosh, -apple-system, BlinkMacSystemFont, monospace !important;
-    font-size: 14px !important;
     background: var(--color-bg);
 
 }
